[fix] smaller object description padding on mobile

--- a/src/app/astro-objects/[name]/(components)/ObjectInfo/ObjectInfo.module.scss
+++ b/src/app/astro-objects/[name]/(components)/ObjectInfo/ObjectInfo.module.scss
@@ -72,6 +72,9 @@
   .info-value {
     font-size: 20px;
   }
+  .page__description {
+    padding: $space-xl;
+  }
 }
 
 @include breakpoint(l) {
